--- a/src/main/resources/password/pwm/i18n/Health.properties
+++ b/src/main/resources/password/pwm/i18n/Health.properties
@@ -50,7 +50,7 @@ HealthMessage_Config_URLNotSecure=URL is not secure (https) for setting %1%
 HealthMessage_Config_NoRecoveryEnabled=No forgotten password recovery options are enabled
 HealthMessage_Config_MissingProxyDN=Missing proxy user DN for profile %1%
 HealthMessage_Config_MissingProxyPassword=Missing proxy user password for profile %1%
-HealthMessage_Config_PasswordPolicyProblem=Password policy %1% configuration anomaly: %2%
+HealthMessage_Config_PasswordPolicyProblem=Password policy '%1%' configuration anomaly: %2%
 HealthMessage_Config_UserPermissionValidity=User Permission configuration for setting %1% issue: %2%.  This may cause unexpected issues.
 HealthMessage_Config_DNValueValidity=LDAP DN configuration setting %1% issue: %2%.  This may cause unexpected issues.
 HealthMessage_Config_Certificate=Certificate for setting %1% issue: %2%
