Migrated person detail modal dialog to angular.

--- a/src/main/angular/src/i18n/translations_en.json
+++ b/src/main/angular/src/i18n/translations_en.json
@@ -3,6 +3,8 @@
   "Title_Management": "Management",
   "Title_DirectReports": "Direct Reports",
   "Title_Organization": "Organization",
+  "Title_OrgChart": "Organizational Chart",
+  "Title_Details": "Details",
 
   "Display_PleaseWait": "Loading..."
 }
