Removed direct report count from PersonCardComponent in OrgChartComponent

--- a/src/main/angular/src/i18n/translations_en.json
+++ b/src/main/angular/src/i18n/translations_en.json
@@ -1,7 +1,7 @@
 {
   "Title_PeopleSearch": "People Search",
   "Title_Management": "Management",
-  "Title_DirectReports": "Direct Reports",
+  "Title_DirectReports": "Direct Report(s)",
   "Title_Organization": "Organization",
   "Title_OrgChart": "Organizational Chart",
   "Title_Details": "Details",
