Fallback translation added to main.ts translation configuraiton. All strings integrated with PWM_GLOBAL.localStrings. Minified production bundle type maps fixed. Shows loading message on PeopleSearch components. Icon fonts use same hash when files have not changed.

--- a/src/main/angular/src/i18n/translations_en.json
+++ b/src/main/angular/src/i18n/translations_en.json
@@ -8,8 +8,8 @@
 
   "Display_PleaseWait": "Loading...",
 
-  "TooManySearchResults": "Only showing {{numResults}} results",
-  "NoSearchResults": "No results",
+  "Display_SearchResultsExceeded": "Search results exceeded maximum search size.",
+  "Display_SearchResultsNone": "No results.",
 
-  "SearchLabel": "Search"
+  "Placeholder_Search": "Search"
 }
