convert captcha from servlet to per-page component

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -170,7 +170,7 @@ Category_Label_LOGGING=Logging
 Category_Label_MODULES=Modules
 Category_Label_MODULES_PRIVATE=Authenticated
 Category_Label_MODULES_PUBLIC=Public
-Category_Label_NAAF=NAAF
+Category_Label_NAAF=NAAF (Deprecated)
 Category_Label_NEWUSER=New User Registration
 Category_Label_NEWUSER_PROFILE=New User Profiles
 Category_Label_NEWUSER_SETTINGS=New User Settings
