--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -21,7 +21,7 @@
 #
 
 Category_Description_ACCOUNT_INFO=Show account information to the logged in user.
-Category_Description_ACTIVATION=The user activation module enables users to activate an account they have not previously authenticated. The user does not need to know the password to activate the account. Configure settings so that a user may only execute this function once. Existing users should not be able to use this function.
+Category_Description_ACTIVATION=The user activation module enables users to activate an account they have not previously authenticated. The user does not need to know the password to activate the account. Configure settings so that users can only execute this function once. Existing users cannot use this function.
 Category_Description_ACTIVE_DIRECTORY=Active Directory specific settings
 Category_Description_ADMINISTRATION=Administration
 Category_Description_APPLICATION=Application
