Provided a health check for SSPR appliance update status.

--- a/src/main/resources/password/pwm/i18n/Health.properties
+++ b/src/main/resources/password/pwm/i18n/Health.properties
@@ -91,3 +91,4 @@ HealthTopic_Application=Application
 HealthTopic_SMS=SMS
 HealthTopic_Database=Database
 HealthTopic_Audit=Audit
+HealthTopic_Appliance=Appliance
