fp oauth username injection

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -593,6 +593,7 @@ Setting_Description_recovery.oauth.idserver.dnAttributeName=Attribute to request
 Setting_Description_recovery.oauth.idserver.loginUrl=OAuth server login URL.  This is the URL to redirect the user to for authentication.
 Setting_Description_recovery.oauth.idserver.secret=OAuth shared secret.  This value will be provided by the OAuth identity service provider.
 Setting_Description_recovery.oauth.idserver.serverCerts=Certificate for the OAuth web service server.
+Setting_Description_recovery.oauth.idserver.usernameSendValue=Username value to send as part of the /grant redirect request.  The remote OAuth server must support the /sign endpoint for this to work.   
 Setting_Description_recovery.postActions=Actions to execute after a user has successfully completed the forgotten password sequence and the user's password has been modified.  You can use macros.
 Setting_Description_recovery.profile.list=A list of forgotten password policies.  This list is evaluated in the order shown here.  The first profile in the list to match on the setting <code>@PwmSettingReference\:recovery.queryMatch@</code> will be applied to a user.<br/><br/>Unless you need to define different forgotten password behavior for different users, you do not need to change this list from the default.
 Setting_Description_recovery.queryMatch=This setting defines the set of users that this profile will be assigned to.
@@ -1066,6 +1067,7 @@ Setting_Label_recovery.oauth.idserver.dnAttributeName=OAuth User Name/DN Login A
 Setting_Label_recovery.oauth.idserver.loginUrl=OAuth Login URL
 Setting_Label_recovery.oauth.idserver.secret=OAuth Shared Secret
 Setting_Label_recovery.oauth.idserver.serverCerts=OAUTH Web Service Server Certificate
+Setting_Label_recovery.oauth.idserver.usernameSendValue=OAuth Inject Username Value
 Setting_Label_recovery.postActions=Forgotten Password Post Actions
 Setting_Label_recovery.profile.list=Forgotten Password Profile
 Setting_Label_recovery.queryMatch=Forgotten Password Profile Match
