description fields for fp identificiation methods

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -239,6 +239,14 @@ Field_VerificationMethodAttributes=Personal Data
 Field_VerificationMethodRemoteResponses=External Responses
 Field_VerificationMethodNAAF=Advanced Authentication
 Field_VerificationMethodOAuth=External Authentication
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=Answer
 Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
 Long_Title_Admin=Administrative functions
