unlock account emil notices

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -308,6 +308,7 @@ Setting_Description_email.default.fromAddress=Specify a default From Address for
 Setting_Description_email.deleteAccount=Define this template to send an email to the users after the Account Delete action.
 Setting_Description_email.guest=Define this template to send an email to newly created guest users.
 Setting_Description_email.helpdesk.token=Define this template to send an email during the Help Desk verification process.  You can use %TOKEN% to insert the token value into the email.
+Setting_Description_email.helpdesk.unlock=Define this template to send an email to users to whose account is unlocked by the help desk.
 Setting_Description_email.intruderNotice=Deinfe this template to send an email when a userDN intruder lockout occurs.
 Setting_Description_email.newUser=Define this template to send an email to newly created users.
 Setting_Description_email.newUser.token=Define this template to send an email during the new user verification process.  You can use %TOKEN% to insert the token value into the email.
@@ -319,6 +320,7 @@ Setting_Description_email.smtp.advancedSettings=Add Name/Value settings to contr
 Setting_Description_email.smtp.port=Specify the network port number for the SMTP server.
 Setting_Description_email.smtp.username=Specify an SMTP user that logs in to the SMTP server so that it can send the emails @PwmAppName@ generates.  A blank value here sends SMTP messages without authentication.
 Setting_Description_email.smtp.userpassword=Specify the password for the SMTP user.  A blank value here sends SMTP messages without authentication.
+Setting_Description_email.unlock=Define this template to send an email to users who unlock their own account.
 Setting_Description_email.updateguest=Define this template to send an email to updated guest users.
 Setting_Description_email.updateProfile=Define this template to send an email to users after a profile update.
 Setting_Description_email.updateProfile.token=Define this template to send an email to users during the profile email validation.
@@ -780,6 +782,7 @@ Setting_Label_email.default.fromAddress=Default From Address
 Setting_Label_email.deleteAccount=Delete Account Email
 Setting_Label_email.guest=Guest Registration Email
 Setting_Label_email.helpdesk.token=Help Desk Verification Email
+Setting_Label_email.helpdesk.unlock=Help Desk Unlock Account Email
 Setting_Label_email.intruderNotice=Intruder Notice Email
 Setting_Label_email.newUser=New User Email
 Setting_Label_email.newUser.token=New User Verification Email
@@ -791,6 +794,7 @@ Setting_Label_email.smtp.advancedSettings=SMTP Email Advanced Settings
 Setting_Label_email.smtp.port=SMTP Email Server Port
 Setting_Label_email.smtp.username=SMTP Email Server User Name
 Setting_Label_email.smtp.userpassword=SMTP Email Server Password
+Setting_Label_email.unlock=Unlock Account Email
 Setting_Label_email.updateguest=Guest Registration Update Email
 Setting_Label_email.updateProfile.token=Update Profile Email Verification
 Setting_Label_email.updateProfile=Update Profile Email
