--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -1033,8 +1033,8 @@ Setting_Label_peopleSearch.enable=Enable PeopleSearch
 Setting_Label_peopleSearch.enablePublic=Enable PeopleSearch Public (Non-Authenticated) Access
 Setting_Label_peopleSearch.idleTimeout=Idle Timeout Seconds
 Setting_Label_peopleSearch.maxCacheSeconds=Search Maximum Cache Seconds
-Setting_Label_peopleSearch.orgChart.childAttribute=Org Chart Child Attribute
-Setting_Label_peopleSearch.orgChart.parentAttribute=Org Chart Parent Attribute
+Setting_Label_peopleSearch.orgChart.childAttribute=Organizational Chart Child Attribute
+Setting_Label_peopleSearch.orgChart.parentAttribute=Organizational Chart Parent Attribute
 Setting_Label_peopleSearch.photo.ldapAttribute=LDAP Photo Attribute
 Setting_Label_peopleSearch.photo.queryFilter=Photo Display Permission
 Setting_Label_peopleSearch.photo.urlOverride=Photo URL Override
